--- a/stories/config/config.env
+++ b/stories/config/config.env
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGO_URI =  mongodb+srv://admin:admin123@cluster0.f5rmr.mongodb.net/stories?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID = 286429020126-udabe6se6f4jvrhr7pp1i15avp9afnca.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
