--- a/resetpasswords/.env
+++ b/resetpasswords/.env
@@ -2,3 +2,8 @@ BCRYPT_SALT=10
 DB_URL=mongodb+srv://admin:admin123@cluster0.pfctsjs.mongodb.net/?retryWrites=true&w=majoritymongodb+srv://admin:<password>@cluster0.pfctsjs.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=resenypassword_project
 CLIENT_URL=localhost://8090
+EMAIL_HOST=ssl://smtp.googlemail.com
+EMAIL_USERNAME=elijahkungu100@gmail.com
+EMAIL_PORT=587
+EMAIL_PASSWORD=0743770216
+FROM_EMAIL=ELIJAH
